--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,11 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.cleeg.scoopreporter.MainActivity">
 
     <TextView
+        android:id="@+id/display_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello, World" />
+        android:layout_gravity="center_horizontal"
+        android:textSize="18sp"
+        tools:text="Christopher Gu" />
+
+    <TextView
+        android:id="@+id/display_cred_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="80sp"
+        tools:text="33" />
+
+    <TextView
+        android:id="@+id/display_cred_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"
+        tools:text="CREDS" />
+
+    <Button
+        android:id="@+id/button_create_report"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Create report" />
 
 </LinearLayout>
