--- a/app/src/main/res/layout/activity_reporter_main.xml
+++ b/app/src/main/res/layout/activity_reporter_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.cleeg.scoopreporter.MainActivity">
+    tools:context="com.example.cleeg.scoopreporter.reporter.ReporterMainActivity">
 
     <TextView
         android:id="@+id/display_name"
